--- a/server.properties
+++ b/server.properties
@@ -1,10 +1,10 @@
 #Minecraft server properties
-#Mon Jun 19 20:50:18 CEST 2023
+#Mon Jun 19 22:54:23 CEST 2023
 enable-jmx-monitoring=false
 rcon.port=25575
 level-seed=
 gamemode=adventure
-enable-command-block=true
+enable-command-block=false
 enable-query=false
 generator-settings={}
 enforce-secure-profile=false
@@ -14,11 +14,11 @@ query.port=25565
 pvp=true
 generate-structures=true
 max-chained-neighbor-updates=1000000
-difficulty=easy
+difficulty=normal
 network-compression-threshold=256
 max-tick-time=60000
 require-resource-pack=false
-max-players=100
+max-players=20
 use-native-transport=true
 online-mode=true
 enable-status=true
